QA Latest Data/main/default/objects/Change_Request__c/Change_Request__c.object-meta.xml
<CustomObject>
    <description>This is used to track the update request of TA for SEC utility</description>
    <label>Change Request</label>
    <nameField>
        <displayFormat>CR-{000}</displayFormat>
        <label>Change Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>