QA Latest Data/main/default/objects/Change_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This  is used to capture the account id of changed account parameters of  SEC</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Change Request</relationshipLabel>
    <relationshipName>Change_Request</relationshipName>
    <type>Lookup</type>
</CustomField>