QA Latest Data/main/default/objects/Change_Request__c/fields/Account_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_City__c</fullName>
    <description>This is used to capture the billing city for SEC on update request from TA</description>
    <label>Account Billing City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>