QA Latest Data/main/default/objects/Change_Request__c/fields/Account_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_State__c</fullName>
    <description>This is used to capture the update on billing state for SEC</description>
    <label>Account Billing State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>