QA Latest Data/main/default/objects/Change_Request__c/fields/Account_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Street__c</fullName>
    <description>This is used to capture the account billing street</description>
    <label>Account Billing Street</label>
    <type>TextArea</type>
</CustomField>