QA Latest Data/main/default/objects/Change_Request__c/fields/Account_Billing_Street_Reference__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Street_Reference__c</fullName>
    <formula>Account__r.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing Street Reference</label>
    <type>Text</type>
</CustomField>