QA Latest Data/main/default/objects/Change_Request__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>This is used to capture the account name for account object when update is done by TA for SEC</description>
    <label>Account Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>