QA Latest Data/main/default/objects/Change_Request__c/fields/Account_Name_Reference__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Reference__c</fullName>
    <formula>Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name Reference</label>
    <type>Text</type>
</CustomField>