QA Latest Data/main/default/objects/Change_Request__c/fields/Account_Postal_Code_Reference__c.field-meta.xml
<CustomField>
    <fullName>Account_Postal_Code_Reference__c</fullName>
    <formula>Account__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Postal Code Reference</label>
    <type>Text</type>
</CustomField>