QA Latest Data/main/default/objects/Change_Request__c/fields/Account_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Account_PostalCode__c</fullName>
    <description>This is used to capture the account postal code for SEC org</description>
    <label>Account PostalCode</label>
    <length>80</length>
    <type>Text</type>
</CustomField>