QA Latest Data/main/default/objects/Change_Request__c/fields/Account_Website__c.field-meta.xml
<CustomField>
    <fullName>Account_Website__c</fullName>
    <description>This is used to capture the  website  update for acount object for  SEC</description>
    <label>Account Website</label>
    <type>Url</type>
</CustomField>