QA Latest Data/main/default/objects/Change_Request__c/fields/Account_Website_Reference__c.field-meta.xml
<CustomField>
    <fullName>Account_Website_Reference__c</fullName>
    <formula>Account__r.Website</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Website Reference</label>
    <type>Text</type>
</CustomField>