QA Latest Data/main/default/objects/Change_Request__c/fields/Change_Request_Approved__c.field-meta.xml
<CustomField>
    <fullName>Change_Request_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Change Request is approved or not- it is defined at this step</description>
    <label>Change Request Approved</label>
    <type>Checkbox</type>
</CustomField>