QA Latest Data/main/default/objects/Change_Request__c/fields/Change_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Change_Request_Status__c</fullName>
    <description>This is used to capture the change request status</description>
    <label>Change Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
                <default>true</default>
                <label>In Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>