QA Latest Data/main/default/objects/Change_Request__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is used to track the id of contact which needs to be updated for SEC</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Change Request</relationshipLabel>
    <relationshipName>Change_Request</relationshipName>
    <type>Lookup</type>
</CustomField>