QA Latest Data/main/default/objects/Change_Request__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>This is used to capture the update of email address for contact oject</description>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>