QA Latest Data/main/default/objects/Change_Request__c/fields/Contact_Email_Reference__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Reference__c</fullName>
    <formula>Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email Reference</label>
    <type>Text</type>
</CustomField>