QA Latest Data/main/default/objects/Change_Request__c/fields/Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_First_Name__c</fullName>
    <description>This is used to capture the contact first name when update is done by TA for sec</description>
    <label>Contact First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>