QA Latest Data/main/default/objects/Change_Request__c/fields/Contact_First_Name_Reference__c.field-meta.xml
<CustomField>
    <fullName>Contact_First_Name_Reference__c</fullName>
    <formula>Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact First Name Reference</label>
    <type>Text</type>
</CustomField>