QA Latest Data/main/default/objects/Change_Request__c/fields/Contact_Last_Name_Reference__c.field-meta.xml
<CustomField>
    <fullName>Contact_Last_Name_Reference__c</fullName>
    <formula>Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Last Name Reference</label>
    <type>Text</type>
</CustomField>