QA Latest Data/main/default/objects/Change_Request__c/fields/Existing_Account_Website__c.field-meta.xml
<CustomField>
    <fullName>Existing_Account_Website__c</fullName>
    <description>This is used to capture the existing account  website</description>
    <formula>Account__r.Website</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Existing Account Website</label>
    <type>Text</type>
</CustomField>