QA Latest Data/main/default/objects/Change_Request__c/listViews/Change_Request_Approval_Change_Request.listView-meta.xml
<ListView>
    <fullName>Change_Request_Approval_Change_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Change Request Approval</label>
    <queue>Change_Request_Approval</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>